# otawa-STM32F427

./: CMakeLists.txt  M4FCycleTiming.h  M7FCycleTiming.h  README.md  hook.cpp  otawa_M4FTime.nmp  otawa_M4FTime.tpl  otawa_M7FTime.nmp  otawa_M7FTime.tpl  otawa_operand.nmp  otawa_operand.tpl  preFetchAnalysis.cpp  stm32.eld  stm32.osx  stm32F427BBTime.cpp  stm32H753xBBTime.cpp
stm32/: bht.xml  cache.xml  m4_memory.xml  m4_pipeline.xml  m7_bht.xml  m7_cache.xml  m7_memory.xml  m7_pipeline.xml  memory.xml  pipeline.xml
